
inc_dir = include_directories('.')

hiberlite_headers = [
    'hiberlite/BeanLoader.h',
    'hiberlite/BeanLoader_impl.hpp',
    'hiberlite/BeanUpdater.h',
    'hiberlite/BeanUpdater_impl.hpp',
    'hiberlite/ChildKiller.h',
    'hiberlite/ChildKiller_impl.hpp',
    'hiberlite/CppModel.h',
    'hiberlite/Database.h',
    'hiberlite/Database_tmpl_impl.hpp',
    'hiberlite/ModelExtractor.h',
    'hiberlite/ModelExtractor_impl.hpp',
    'hiberlite/Registry.h',
    'hiberlite/Registry_impl.hpp',
    'hiberlite/SQLiteStmt.h',
    'hiberlite/UpdateVisitor_tmpl.hpp',
    'hiberlite/Visitor.h',
    'hiberlite/Visitor_tmpl_impl.hpp',
    'hiberlite/bean_ptr.h',
    'hiberlite/bean_ptr_impl.hpp',
    'hiberlite/common.h',
    'hiberlite/db_error.h',
    'hiberlite/hiberdefs.h',
    'hiberlite/hiberlite.h',
    'hiberlite/nvp.h',
    'hiberlite/shared_res.h',
    'hiberlite/some_types.h',
]

# Make this library usable from the system's
# package manager.
install_headers(hiberlite_headers, preserve_path: true)
